# fused-dequantisation-kernels

./: .gitignore  LICENSE  README.md  build.ninja  pyproject.toml
cpp/: bench.cu
notebooks/: 2025-01-15-analysis.ipynb  2025-01-analysis.ipynb  2025-01-paper.ipynb  2025-01-tune.ipynb  2026-01-14-tune.ipynb  2026-01-paper.ipynb  plot_utils.py  tune.ipynb
py/: bench.py  tune.ipynb
src/: bench.py  kernels.py  qbench.py  qkernels.py  qmodels.py
src/experimental/: bench.cu  build.ninja
src/experimental/cpu/: android.build.ninja  bench.cpp  build.ninja  run_on_device.sh
src/experimental/cuda/: build.ninja
src/fdk/: __init__.py  bench.py  kernels.py  models.py
src/fdk/marlin/: __init__.py
src/marlin/: README.md  __init__.py  marlin_cuda.cpp  marlin_cuda_kernel.cu
