[project]
name = "quantisation-benchmarking"
version = "0.1.0"
description = "Dequantisation kernel benchmarks"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "triton",
    "pandas",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "tqdm",
    "scipy",
    "setuptools",  # for torch.utils.cpp_extension
]

[tool.setuptools]
packages = []

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
triton = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
