[project]
name = "quantisation-benchmarking"
version = "0.1.0"
description = "Dequantisation kernel benchmarks"
requires-python = ">=3.10"
dependencies = [
    "setuptools", # for torch.utils.cpp_extension
    "tqdm",
    "torch",
    "triton",
    "transformers==4.57.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "pandas",
    "scipy",
    "seaborn",
]

[tool.setuptools]
packages = []

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
triton = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
