[project]
name = "fused-dequantisation-kernels"
version = "0.1.0"
description = "Dequantisation kernels and benchmarks for weight quantisation formats"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "setuptools", # for torch.utils.cpp_extension
    "tqdm",
    "torch",
    "triton",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "pandas",
    "scipy",
    "seaborn",
]

[tool.setuptools]
packages = []

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
triton = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
